--- a/home/templates/home/about_us.html
+++ b/home/templates/home/about_us.html
@@ -11,7 +11,7 @@
         <div class="col d-flex justify-content-center"><h1>Who are we?</h1></div>
         </div>
     <div class="row">
-        <div class="col text-center"><h5>Scav è una cifra ricchione ma luca di piu<br>quindi scialla ci piace a tutti il cazzo</h5></div>
+        <div class="col text-center"><h5>..Work in progress..</h5></div>
     </div>
 </div>
 {% endblock %}
