--- a/home/templates/home/contact_us.html
+++ b/home/templates/home/contact_us.html
@@ -5,6 +5,9 @@
     <title>{% block title%}Contact Us{% endblock %}</title>
 </head>
 <body>
-
+    {%block content%}
+        <h5>Contact us on Instagram</h5>
+        <h4>@ttbreseller</h4>
+    {% endblock %}
 </body>
 </html>
