--- a/home/templates/home/contact_us.html
+++ b/home/templates/home/contact_us.html
@@ -6,8 +6,14 @@
 </head>
 <body>
     {%block content%}
-        <h5>Contact us on Instagram</h5>
-        <h4>@ttbreseller</h4>
+    <div class="container">
+        <div class="row mt-5 mb-4">
+            <div class="col d-flex justify-content-center"><h1>Contact us</h1></div>
+            </div>
+        <div class="row">
+            <div class="col text-center"><h5>IG: @ttbreseller</h5></div>
+        </div>
+    </div>
     {% endblock %}
 </body>
 </html>
