--- a/home/templates/home/contact_us.html
+++ b/home/templates/home/contact_us.html
@@ -1,5 +1,6 @@
 {% extends 'home/base.html' %}
-<html lang="en">
+{% load static %}
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>{% block title%}Contact Us{% endblock %}</title>
@@ -8,12 +9,13 @@
     {%block content%}
     <div class="container">
         <div class="row mt-5 mb-4">
-            <div class="col d-flex justify-content-center"><h1>Contact us</h1></div>
+            <div class="col d-flex justify-content-center"><h1 style="font-size:50px">Contact us</h1></div>
             </div>
         <div class="row">
-            <div class="col text-center"><h5>IG: @ttbreseller</h5></div>
+            <div class="col d-flex justify-content-center mt-3"><a href="https://www.instagram.com/ttbreseller/"><h2><img src="{% static 'images/ig1.jpg' %}" style="width:40x; height:40px"></a>@ttbreseller</h2></div>
         </div>
     </div>
-    {% endblock %}
+
+    {% endblock content%}
 </body>
 </html>
