sneaker change url

--- a/home/templates/home/about_us.html
+++ b/home/templates/home/about_us.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title%}About Us{% endblock %}</title>
+    <title>{% block title%}TTB - About Us{% endblock %}</title>
 </head>
 <body>
 {% block content %}
