--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width">
     <meta charset="UTF-8">
-    <title>{% block title %}Home{% endblock %}</title>
+    <title>{% block title %}TTB - Home{% endblock %}</title>
 <body>
 {% block content %}
 <br><br>
@@ -16,7 +16,7 @@
             <img class="card-img-top" src="{{ sneaker.get_first_img }}" style="height:14rem">
             <div class="card-body">
               <h5 class="card-title">{{sneaker.name}}</h5>{% if sneaker.fill_line == True %}<br>{% endif %}
-                <p class="card-text">Available Size:{% for size in sneaker.sneakersize_set.all %} {% if size.sold == True %}<strike>{{size.size_number}}</strike>{% else %}{{size.size_number}}{% endif %}{% endfor %}</p>
+                <p class="card-text">Size:{% for size in sneaker.sneakersize_set.all %} {% if size.sold == True %}<strike>{{size.size_number}}</strike>{% else %}{{size.size_number}}{% endif %}{% endfor %}</p>
             </div>
           </div>
         </div>
