--- a/home/templates/home/contact_us.html
+++ b/home/templates/home/contact_us.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title%}Contact Us{% endblock %}</title>
+    <title>{% block title%}TTB - Contact Us{% endblock %}</title>
 </head>
 <body>
     {%block content%}
